--- a/jaar1.html
+++ b/jaar1.html
@@ -24,6 +24,9 @@
 					  <li>
 					  	<a href="jaar3.html">Jaar 3</a>
 					  </li>
+					  <li>
+					  	<a href="jaar4.html">Jaar 4</a>
+					  </li>
 					</ul>
 			</nav>
 		</header>
@@ -142,89 +145,10 @@
 							<td align="right">V</td>
 							<td align="right">3</td>
 						</tr>
-					</table>
-
-
-		<h2>Periode A</h2>
-
-		<table align="center" width="800">
-			<tr class="head">
-				<th align="left">Les</th>
-				<th align="left">Type</th> 
-				<th align="left" colspan="3">Cijfer</th>
-				<th>Percentage</th>
-				<th>Cijfer</th>
-			</tr>
-			<tr>
-				<td rowspan="2">Introduction</td>
-				<td>Verslag</td>
-				<td>6,4</td>
-				<td></td>
-				<td></td>
-				<td align="right">30%</td>
-				<td align="right">6,4</td>
-			</tr>
-			<tr>
-				<td>Eindtoets</td>
-				<td class="over">3,4</td>
-				<td>6,4</td>
-				<td></td>
-				<td align="right">70%</td>
-				<td align="right">6,4</td>
-			</tr>
-
-
-			<tr>
-				<td rowspan="2">Understanding People</td>
-				<td>Verslag</td>
-				<td>7,3</td>
-				<td></td>
-				<td></td>
-				<td align="right">70%</td>
-				<td align="right">7,3</td>
-			</tr>
-			<tr>
-				<td>Zelfreflectie</td>
-				<td>6,9</td>
-				<td></td>
-				<td></td>
-				<td align="right">30%</td>
-				<td align="right">6,9</td>
-			</tr>
-
-
-			<tr>
-				<td rowspan="2">Web Techniek</td>
-				<td>Deeltoets</td>
-				<td>6,3</td>
-				<td>8,6</td>
-				<td>4,3</td>
-				<td align="right">45%</td>
-				<td align="right">6,5</td>
-			</tr>
-			<tr>
-				<td>Eindtoets</td>
-				<td class="over">4,7</td>
-				<td>6,1</td>
-				<td></td>
-				<td align="right">55%</td>
-				<td align="right">6,1</td>
-			</tr>
-
-
-			<tr>
-				<td>Visual Communication</td>
-				<td>Verslag</td>
-				<td>8,5</td>
-				<td></td>
-				<td></td>
-				<td align="right">100%</td>
-				<td align="right">8,5</td>
-			</tr>
-
 		</table>
 
-			<h2>Periode B</h2>
+
+			<h2>Periode A</h2>
 
 			<table align="center" width="800">
 				<tr class="head">
@@ -235,67 +159,75 @@
 					<th>Cijfer</th>
 				</tr>
 				<tr>
-					<td rowspan="2">Look and Listen</td>
+					<td rowspan="2">Introduction</td>
 					<td>Verslag</td>
-					<td>7,0</td>
-					<td>7,5</td>
+					<td>6,4</td>
 					<td></td>
-					<td align="right">80%</td>
+					<td></td>
+					<td align="right">30%</td>
+					<td align="right">6,4</td>
+				</tr>
+				<tr>
+					<td>Eindtoets</td>
+					<td class="over">3,4</td>
+					<td>6,4</td>
+					<td></td>
+					<td align="right">70%</td>
+					<td align="right">6,4</td>
+				</tr>
+
+
+				<tr>
+					<td rowspan="2">Understanding People</td>
+					<td>Verslag</td>
+					<td>7,3</td>
+					<td></td>
+					<td></td>
+					<td align="right">70%</td>
 					<td align="right">7,3</td>
 				</tr>
 				<tr>
 					<td>Zelfreflectie</td>
-					<td>6,0</td>
+					<td>6,9</td>
 					<td></td>
 					<td></td>
-					<td align="right">20%</td>
-					<td align="right">6,0</td>
+					<td align="right">30%</td>
+					<td align="right">6,9</td>
 				</tr>
 
 
 				<tr>
-					<td rowspan="2">Introduction to Programming</td>
+					<td rowspan="2">Web Techniek</td>
 					<td>Deeltoets</td>
-					<td class="over">6,9</td>
-					<td class="over">7,8</td>
-					<td class="over">1,8</td>
+					<td>6,3</td>
+					<td>8,6</td>
+					<td>4,3</td>
 					<td align="right">45%</td>
-					<td align="right">7,0</td>
+					<td align="right">6,5</td>
 				</tr>
 				<tr>
 					<td>Eindtoets</td>
-					<td>5,3</td>
-					<td></td>
-					<td></td>
-					<td align="right">55%</td>
-					<td align="right">5,3</td>
-				</tr>
-
-
-				<tr>
-					<td>The User and The System</td>
-					<td>Verslag</td>
-					<td>5,5</td>
-					<td></td>
-					<td></td>
-					<td align="right">100%</td>
-					<td align="right">5,5</td>
-				</tr>
-
-
-				<tr>
-					<td>Visual Communication II</td>
-					<td>Verslag</td>
-					<td>6,3</td>
+					<td class="over">4,7</td>
 					<td>6,1</td>
 					<td></td>
-					<td align="right">100%</td>
-					<td align="right">6,2</td>
+					<td align="right">55%</td>
+					<td align="right">6,1</td>
 				</tr>
+
+
+				<tr>
+					<td>Visual Communication</td>
+					<td>Verslag</td>
+					<td>8,5</td>
+					<td></td>
+					<td></td>
+					<td align="right">100%</td>
+					<td align="right">8,5</td>
+				</tr>
+
 			</table>
 
-
-				<h2>Periode C</h2>
+				<h2>Periode B</h2>
 
 				<table align="center" width="800">
 					<tr class="head">
@@ -306,74 +238,67 @@
 						<th>Cijfer</th>
 					</tr>
 					<tr>
-						<td rowspan="2">
-						User Research</td>
+						<td rowspan="2">Look and Listen</td>
 						<td>Verslag</td>
-						<td>6,5</td>
+						<td>7,0</td>
+						<td>7,5</td>
 						<td></td>
-						<td width="30"></td>
-						<td align="right">30%</td>
-						<td align="right">6,5</td>
+						<td align="right">80%</td>
+						<td align="right">7,3</td>
 					</tr>
 					<tr>
-						<td>Eindtoets</td>
+						<td>Zelfreflectie</td>
 						<td>6,0</td>
 						<td></td>
 						<td></td>
-						<td align="right">70%</td>
+						<td align="right">20%</td>
 						<td align="right">6,0</td>
 					</tr>
 
 
 					<tr>
-						<td rowspan="2">Intercultural Communication</td>
-						<td>Blog</td>
-						<td>7,0</td>
-						<td></td>
-						<td></td>
-						<td align="right">40%</td>
+						<td rowspan="2">Introduction to Programming</td>
+						<td>Deeltoets</td>
+						<td class="over">6,9</td>
+						<td class="over">7,8</td>
+						<td class="over">1,8</td>
+						<td align="right">45%</td>
 						<td align="right">7,0</td>
 					</tr>
 					<tr>
 						<td>Eindtoets</td>
-						<td class="over">3,8</td>
-						<td class="over">4,4</td>
-						<td>6,4</td>
-						<td align="right">60%</td>
-						<td align="right">6,4</td>
+						<td>5,3</td>
+						<td></td>
+						<td></td>
+						<td align="right">55%</td>
+						<td align="right">5,3</td>
 					</tr>
 
 
 					<tr>
-						<td>Patterns of Interaction</td>
+						<td>The User and The System</td>
 						<td>Verslag</td>
-						<td class="over">5,0</td>
-						<td>7,5</td>
+						<td>5,5</td>
+						<td></td>
 						<td></td>
 						<td align="right">100%</td>
-						<td align="right">7,5</td>
+						<td align="right">5,5</td>
 					</tr>
 
 
 					<tr>
-						<td rowspan="2">Design Details and Realise</td>
+						<td>Visual Communication II</td>
 						<td>Verslag</td>
-						<td class="over">5,3</td>
 						<td>6,3</td>
+						<td>6,1</td>
 						<td></td>
-						<td align="right">60%</td>
-						<td align="right">6,3</td>
+						<td align="right">100%</td>
+						<td align="right">6,2</td>
 					</tr>
-						<td>Realise</td>
-						<td class="over">4,0</td>
-						<td>6,0</td>
-						<td></td>
-						<td align="right">40%</td>
-						<td align="right">6,0</td>
 				</table>
 
 
-					<h2>Periode D</h2>
+					<h2>Periode C</h2>
 
 					<table align="center" width="800">
 						<tr class="head">
@@ -384,96 +309,174 @@
 							<th>Cijfer</th>
 						</tr>
 						<tr>
-							<td rowspan="3">Design for online Presence</td>
-							<td>Waaier</td>
-							<td>V</td>
+							<td rowspan="2">
+							User Research</td>
+							<td>Verslag</td>
+							<td>6,5</td>
 							<td></td>
 							<td width="30"></td>
-							<td align="right">O/V</td>
-							<td align="right">V</td>
-						</tr>
-						<tr>
-							<td>Taalvaardig</td>
-							<td>V</td>
-							<td></td>
-							<td></td>
-							<td align="right">O/V</td>
-							<td align="right">V</td>
-						</tr>
-						<tr>
-							<td>Assessment</td>
-							<td class="over">3,7</td>
-							<td class="over">4,5</td>
-							<td>6,5</td>
-							<td align="right">100%</td>
+							<td align="right">30%</td>
 							<td align="right">6,5</td>
 						</tr>
-
-
 						<tr>
-							<td rowspan="3">Creative Research</td>
-							<td>Middelen</td>
-							<td>9,0</td>
+							<td>Eindtoets</td>
+							<td>6,0</td>
 							<td></td>
 							<td></td>
-							<td align="right">45%</td>
-							<td align="right">9,0</td>
-						</tr>
-						<tr>
-							<td>Rapport</td>
-							<td>8,9</td>
-							<td></td>
-							<td></td>
-							<td align="right">45%</td>
-							<td align="right">8,9</td>
-						</tr>
-						<tr>
-							<td>Presentatie</td>
-							<td>8,5</td>
-							<td></td>
-							<td></td>
-							<td align="right">10%</td>
-							<td align="right">8,5</td>
+							<td align="right">70%</td>
+							<td align="right">6,0</td>
 						</tr>
 
 
 						<tr>
-							<td rowspan="2">Media in the Sociaty</td>
-							<td>Betoog</td>
-							<td>8,0</td>
+							<td rowspan="2">Intercultural Communication</td>
+							<td>Blog</td>
+							<td>7,0</td>
 							<td></td>
 							<td></td>
 							<td align="right">40%</td>
-							<td align="right">8,0</td>
+							<td align="right">7,0</td>
 						</tr>
 						<tr>
-							<td>Schriftelijk</td>
-							<td class="over">2,0</td>
-							<td class="over">4,1</td>
-							<td>5,4</td>
+							<td>Eindtoets</td>
+							<td class="over">3,8</td>
+							<td class="over">4,4</td>
+							<td>6,4</td>
 							<td align="right">60%</td>
-							<td align="right">5,4</td>
+							<td align="right">6,4</td>
 						</tr>
 
 
 						<tr>
-							<td rowspan="2">Portfolio</td>
+							<td>Patterns of Interaction</td>
 							<td>Verslag</td>
-							<td>V</td>
+							<td class="over">5,0</td>
+							<td>7,5</td>
 							<td></td>
-							<td></td>
-							<td align="right">O/V</td>
-							<td align="right">V</td>
+							<td align="right">100%</td>
+							<td align="right">7,5</td>
 						</tr>
+
+
 						<tr>
-							<td>Nederlands</td>
-							<td class="over">O</td>
-							<td class="over">O</td>
-							<td>V</td>
-							<td align="right">O/V</td>
-							<td align="right">V</td>
+							<td rowspan="2">Design Details and Realise</td>
+							<td>Verslag</td>
+							<td class="over">5,3</td>
+							<td>6,3</td>
+							<td></td>
+							<td align="right">60%</td>
+							<td align="right">6,3</td>
 						</tr>
+							<td>Realise</td>
+							<td class="over">4,0</td>
+							<td>6,0</td>
+							<td></td>
+							<td align="right">40%</td>
+							<td align="right">6,0</td>
 					</table>
+
+
+						<h2>Periode D</h2>
+
+						<table align="center" width="800">
+							<tr class="head">
+								<th align="left">Les</th>
+								<th align="left">Type</th> 
+								<th align="left" colspan="3">Cijfer</th>
+								<th>Percentage</th>
+								<th>Cijfer</th>
+							</tr>
+							<tr>
+								<td rowspan="3">Design for online Presence</td>
+								<td>Waaier</td>
+								<td>V</td>
+								<td></td>
+								<td width="30"></td>
+								<td align="right">O/V</td>
+								<td align="right">V</td>
+							</tr>
+							<tr>
+								<td>Taalvaardig</td>
+								<td>V</td>
+								<td></td>
+								<td></td>
+								<td align="right">O/V</td>
+								<td align="right">V</td>
+							</tr>
+							<tr>
+								<td>Assessment</td>
+								<td class="over">3,7</td>
+								<td class="over">4,5</td>
+								<td>6,5</td>
+								<td align="right">100%</td>
+								<td align="right">6,5</td>
+							</tr>
+
+
+							<tr>
+								<td rowspan="3">Creative Research</td>
+								<td>Middelen</td>
+								<td>9,0</td>
+								<td></td>
+								<td></td>
+								<td align="right">45%</td>
+								<td align="right">9,0</td>
+							</tr>
+							<tr>
+								<td>Rapport</td>
+								<td>8,9</td>
+								<td></td>
+								<td></td>
+								<td align="right">45%</td>
+								<td align="right">8,9</td>
+							</tr>
+							<tr>
+								<td>Presentatie</td>
+								<td>8,5</td>
+								<td></td>
+								<td></td>
+								<td align="right">10%</td>
+								<td align="right">8,5</td>
+							</tr>
+
+
+							<tr>
+								<td rowspan="2">Media in the Sociaty</td>
+								<td>Betoog</td>
+								<td>8,0</td>
+								<td></td>
+								<td></td>
+								<td align="right">40%</td>
+								<td align="right">8,0</td>
+							</tr>
+							<tr>
+								<td>Schriftelijk</td>
+								<td class="over">2,0</td>
+								<td class="over">4,1</td>
+								<td>5,4</td>
+								<td align="right">60%</td>
+								<td align="right">5,4</td>
+							</tr>
+
+
+							<tr>
+								<td rowspan="2">Portfolio</td>
+								<td>Verslag</td>
+								<td>V</td>
+								<td></td>
+								<td></td>
+								<td align="right">O/V</td>
+								<td align="right">V</td>
+							</tr>
+							<tr>
+								<td>Nederlands</td>
+								<td class="over">O</td>
+								<td class="over">O</td>
+								<td>V</td>
+								<td align="right">O/V</td>
+								<td align="right">V</td>
+							</tr>
+						</table>
 
 		<br />
 
