--- a/jaar2.html
+++ b/jaar2.html
@@ -24,6 +24,9 @@
 					  <li>
 					  	<a href="jaar3.html">Jaar 3</a>
 					  </li>
+					  <li>
+					  	<a href="jaar4.html">Jaar 4</a>
+					  </li>
 					</ul>
 			</nav>
 		</header>
