--- a/jaar4.html
+++ b/jaar4.html
@@ -4,7 +4,7 @@
 	<head>
   		<meta charset="UTF-8">
   		<meta name="viewport" content="width=device-width, user-scalable=0;">
-  		<title>Jaar 3</title>
+  		<title>Jaar 4</title>
 		<link type ="text/css" rel="stylesheet" href="css/styles.css">
 	</head>
 
@@ -39,34 +39,34 @@
 				<th>Studiepunten</th>
 			</tr>
 				<tr>
-					<td rowspan="1">Minor Design for User Experience</td>
-					<td>Assessment</td>
-					<td align="right">X</td>
-					<td align="right" class="onvoldoende">15</td>
+					<td rowspan="1"></td>
+					<td></td>
+					<td align="right"></td>
+					<td align="right"></td>
 				</tr>
 
 					<tr>
-						<td rowspan="2">Minor Fotografie</td>
-						<td>Praktijk</td> 
-						<td align="right">7,2</td>
-						<td align="right" rowspan="2">15</td>
+						<td rowspan="2"></td>
+						<td></td> 
+						<td align="right"></td>
+						<td align="right" rowspan="2"></td>
 					</tr>
 
 						<tr>
-							<td>Theorie</td> 
-							<td align="right">6,8</td>
+							<td></td> 
+							<td align="right"></td>
 						</tr>
 
 							<tr>
-								<td rowspan="1">Stage</td>
-								<td>Rapport</td> 
-								<td align="right">8,0</td>
-								<td align="right">30</td>
+								<td rowspan="1"></td>
+								<td></td> 
+								<td align="right"></td>
+								<td align="right"></td>
 							</tr>
 
 		</table>
 
-		<h2>Minor Design for User Experience</h2>
+		<h2></h2>
 
 		<table align="center" width="800">
 			<tr class="head">
@@ -78,17 +78,17 @@
 			</tr>
 
 				<tr>
-					<td rowspan="1">Praktijk</td>
-					<td>Assessment</td>
-					<td class="onvoldoende">O</td>
-					<td width="30" class="onvoldoende">O</td>
+					<td rowspan="1"></td>
+					<td></td>
+					<td class="onvoldoende"></td>
+					<td width="30"></td>
 					<td width="30"></td>
 					<td align="right">100%</td>
-					<td align="right">X</td>
+					<td align="right"></td>
 				</tr>
 		</table>
 
-		<h2>Minor Fotografie</h2>
+		<h2></h2>
 
 		<table align="center" width="800">
 			<tr class="head">
@@ -100,82 +100,46 @@
 			</tr>
 
 				<tr>
-					<td rowspan="5">Praktijk</td>
-					<td>Texture & Rythm</td>
-					<td>6,5</td>
+					<td rowspan="5"></td>
+					<td></td>
+					<td></td>
 					<td width="30"></td>
 					<td width="30"></td>
 					<td align="right">100%</td>
-					<td align="right">6,5</td>
+					<td align="right"></td>
 				</tr>
-
-					<tr>
-						<td>Styling</td>
-						<td>7,0</td>
-						<td></td>
-						<td></td>
-						<td align="right">100%</td>
-						<td align="right">7,0</td>
-					</tr>
-
-						<tr>
-							<td>Light</td>
-							<td>8,0</td>
-							<td></td>
-							<td></td>
-							<td align="right">100%</td>
-							<td align="right">8,0</td>
-						</tr>
-
-							<tr>
-								<td>Time</td>
-								<td>7,0</td>
-								<td></td>
-								<td></td>
-								<td align="right">100%</td>
-								<td align="right">7,0</td>
-							</tr>
-
-								<tr>
-									<td>Fascination</td>
-									<td>7,5</td>
-									<td></td>
-									<td></td>
-									<td align="right">100%</td>
-									<td align="right">7,5</td>
-								</tr>
 
 			<tr>
-					<td rowspan="3">Theorie</td>
-					<td>Museum</td>
-					<td>6,0</td>
+					<td rowspan="3"></td>
+					<td></td>
+					<td></td>
 					<td width="30"></td>
 					<td width="30"></td>
 					<td align="right">100%</td>
-					<td align="right">6,0</td>
+					<td align="right"></td>
 				</tr>
 
 					<tr>
-						<td>Fascination</td>
-						<td>7,0</td>
+						<td></td>
+						<td></td>
 						<td></td>
 						<td></td>
 						<td align="right">100%</td>
-						<td align="right">7,0</td>
+						<td align="right"></td>
 					</tr>
 
 						<tr>
-							<td>Assessment</td>
-							<td>7,5</td>
+							<td></td>
+							<td></td>
 							<td></td>
 							<td></td>
 							<td align="right">100%</td>
-							<td align="right">7,5</td>
+							<td align="right"></td>
 						</tr>
 
 		</table>
 
-		<h2>Stage Evalytics</h2>
+		<h2></h2>
 
 		<table align="center" width="800">
 			<tr class="head">
@@ -187,13 +151,13 @@
 			</tr>
 
 				<tr>
-					<td rowspan="1">Praktijk</td>
-					<td>Verslag</td>
-					<td width="30">8,0</td>
+					<td rowspan="1"></td>
+					<td></td>
+					<td width="30"></td>
 					<td width="30"></td>
 					<td width="30"></td>
 					<td align="right">100%</td>
-					<td align="right">8,0</td>
+					<td align="right"></td>
 				</tr>
 		</table>
 
