--- a/jaar4.html
+++ b/jaar4.html
@@ -46,16 +46,11 @@
 				</tr>
 
 					<tr>
-						<td rowspan="2">Project 4: Autonomous Design</td>
+						<td>Project 4: Autonomous Design</td>
 						<td>Portfolio</td> 
-						<td align="right"></td>
-						<td align="right" rowspan="2">(12)</td>
+						<td align="right">7,5</td>
+						<td align="right">12</td>
 					</tr>
-
-						<tr>
-							<td>Assessment</td> 
-							<td align="right"></td>
-						</tr>
 
 							<tr>
 								<td rowspan="1">Young Professionals</td>
@@ -119,47 +114,47 @@
 
 				<tr>
 					<td>Portfolio</td>
+					<td width="30">7,5</td>
 					<td width="30"></td>
 					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right"></td>
-					<td align="right"></td>
+					<td align="right">100%</td>
+					<td align="right">7,5</td>
 				</tr>
 
 					<tr>
 						<td>Design Rationale</td>
+						<td>V</td>
 						<td></td>
 						<td></td>
-						<td></td>
-						<td align="right"></td>
-						<td align="right"></td>
+						<td align="right">V/O</td>
+						<td align="right">V</td>
 					</tr>
 
 						<tr>
 							<td>Visual Summary</td>
+							<td>V</td>
 							<td></td>
 							<td></td>
-							<td></td>
-							<td align="right"></td>
-							<td align="right"></td>
+							<td align="right">V/O</td>
+							<td align="right">V</td>
 						</tr>
 
 							<tr>
 								<td>Reflectie</td>
+								<td>V</td>
 								<td></td>
 								<td></td>
-								<td></td>
-								<td align="right"></td>
-								<td align="right"></td>
+								<td align="right">V/O</td>
+								<td align="right">V</td>
 							</tr>
 
 								<tr>
 									<td>Assessment</td>
+									<td>V</td>
 									<td></td>
 									<td></td>
-									<td></td>
-									<td align="right"></td>
-									<td align="right"></td>
+									<td align="right">V/O</td>
+									<td align="right">V</td>
 								</tr>
 
 		</table>
