--- a/jaar2.html
+++ b/jaar2.html
@@ -19,7 +19,7 @@
 					    <a href="jaar1.html">Jaar 1</a>
 					  </li>
 					  <li>
-					  	<a href="jaar2.html">Jaar 2</a>
+					  	<a href="jaar2.html" style="color: #9C7F89;">Jaar 2</a>
 					  </li>
 					  <li>
 					  	<a href="jaar3.html">Jaar 3</a>
