--- a/jaar3.html
+++ b/jaar3.html
@@ -22,7 +22,7 @@
 					  	<a href="jaar2.html">Jaar 2</a>
 					  </li>
 					  <li>
-					  	<a href="jaar3.html">Jaar 3</a>
+					  	<a href="jaar3.html" style="color: #9C7F89;">Jaar 3</a>
 					  </li>
 					  <li>
 					  	<a href="jaar4.html">Jaar 4</a>
