--- a/jaar4.html
+++ b/jaar4.html
@@ -25,7 +25,7 @@
 					  	<a href="jaar3.html">Jaar 3</a>
 					  </li>
 					  <li>
-					  	<a href="jaar4.html">Jaar 4</a>
+					  	<a href="jaar4.html" style="color: #9C7F89;">Jaar 4</a>
 					  </li>
 					</ul>
 			</nav>
@@ -74,8 +74,8 @@
 									</tr>
 
 										<tr>
-											<td rowspan="1">Minor</td>
-											<td></td> 
+											<td rowspan="1">Minor Internetmarketing Management</td>
+											<td>Assessment</td> 
 											<td align="right"></td>
 											<td align="right">(15)</td>
 										</tr>
@@ -219,7 +219,7 @@
 				</tr>
 		</table>
 
-		<h2>Minor</h2>
+		<h2>Minor Internetmarketing Management</h2>
 
 		<table align="center" width="800">
 			<tr class="head">
@@ -230,11 +230,20 @@
 			</tr>
 
 				<tr>
-					<td rowspan="1"></td>
+					<td rowspan="1">Rapportage</td>
 					<td width="30"></td>
 					<td width="30"></td>
 					<td width="30"></td>
-					<td align="right">100%</td>
+					<td align="right">50%</td>
+					<td align="right"></td>
+				</tr>
+
+				<tr>
+					<td>Eindtoets</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td align="right">50%</td>
 					<td align="right"></td>
 				</tr>
 		</table>
