--- a/jaar1.html
+++ b/jaar1.html
@@ -16,7 +16,7 @@
 					<ul>
 
 					  <li>
-					    <a href="jaar1.html">Jaar 1</a>
+					    <a href="jaar1.html" style="color: #9C7F89;">Jaar 1</a>
 					  </li>
 					  <li>
 					  	<a href="jaar2.html">Jaar 2</a>
