--- a/jaar4.html
+++ b/jaar4.html
@@ -55,8 +55,8 @@
 							<tr>
 								<td rowspan="1">Young Professionals</td>
 								<td>Assessment</td>
-								<td align="right"></td>
-								<td align="right">(3)</td>
+								<td align="right">V</td>
+								<td align="right">3</td>
 							</tr>
 
 								<tr>
@@ -69,8 +69,8 @@
 									<tr>
 										<td rowspan="1">Personal Development</td>
 										<td>Essay</td> 
-										<td align="right"></td>
-										<td align="right">(3)</td>
+										<td align="right">V</td>
+										<td align="right">3</td>
 									</tr>
 
 										<tr>
@@ -170,12 +170,12 @@
 			</tr>
 
 				<tr>
-					<td>Assessment</td>
+					<td>Participatie</td>
+					<td width="30">V</td>
 					<td width="30"></td>
 					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right">100%</td>
-					<td align="right"></td>
+					<td align="right">V/O</td>
+					<td align="right">V</td>
 				</tr>
 		</table>
 
@@ -210,12 +210,12 @@
 			</tr>
 
 				<tr>
-					<td rowspan="1">Essay</td>
+					<td width="240">Essay</td>
+					<td width="30">V</td>
 					<td width="30"></td>
 					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right">100%</td>
-					<td align="right"></td>
+					<td align="right">V/O</td>
+					<td align="right">V</td>
 				</tr>
 		</table>
 
