--- a/jaar4.html
+++ b/jaar4.html
@@ -230,22 +230,53 @@
 			</tr>
 
 				<tr>
-					<td rowspan="1">Rapportage</td>
+					<td rowspan="1">Opdracht 1: Toetsing</td>
+					<td width="30">5,5</td>
 					<td width="30"></td>
 					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right">50%</td>
+					<td align="right">10%</td>
 					<td align="right"></td>
 				</tr>
-
-				<tr>
-					<td>Eindtoets</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td align="right">50%</td>
-					<td align="right"></td>
-				</tr>
+					<tr>
+						<td rowspan="1">Opdracht 2: BMC</td>
+						<td width="30">8,0</td>
+						<td width="30"></td>
+						<td width="30"></td>
+						<td align="right">10%</td>
+						<td align="right"></td>
+					</tr>
+						<tr>
+							<td rowspan="1">Opdracht 3: Meso-Analyse</td>
+							<td width="30">7,0</td>
+							<td width="30"></td>
+							<td width="30"></td>
+							<td align="right">10%</td>
+							<td align="right"></td>
+						</tr>
+							<tr>
+								<td rowspan="1">Opdracht 4: Positioneren</td>
+								<td width="30" class="onvoldoende">NVD</td>
+								<td width="30"></td>
+								<td width="30"></td>
+								<td align="right">10%</td>
+								<td align="right"></td>
+							</tr>
+								<tr>
+									<td rowspan="1">Rapportage</td>
+									<td width="30" class="onvoldoende">NVD</td>
+									<td width="30"></td>
+									<td width="30"></td>
+									<td align="right">30%</td>
+									<td align="right"></td>
+								</tr>
+									<tr>
+										<td>Eindtoets</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td align="right">30%</td>
+										<td align="right"></td>
+									</tr>
 		</table>
 
 		<br />
