--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 					</ul>
 			</nav>
 		</header>
-			<h1>Hallo! Ik ben Shanice Kloppers.</h1>
-				<h2>Welkom bij mijn Online Rapport.</h2>
+			<h2>Hallo! Ik ben Shanice Kloppers.</h2>
+				<h3>Welkom bij mijn Online Rapport.</h3>
 
 					<p>Momenteel volg ik de studie Communicatie en Multimedia Design aan de Haagse Hogeschool. Deze studie heeft onder andere te maken met communicatie, marketing, programmeren en vooral design. Kort gezegd gaat deze studie over Webdesign. Internet blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen.</p>
 
@@ -39,7 +39,9 @@
 					<p>Ik heb mijn Propedeuse behaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter.</p>
 
 					<h3>Wat ik nu doe</h3>
-					<p>Momenteel zit ik in mijn laatste jaar. De eerste 5 maanden volg ik nog vakken. Hierna heb ik een minor en doe ik in te halen vakken voor 2,5 maand. Hierna ga ik een afstudeerstage lopen en zal waarschijnlijk in september 2020 afstuderen.</p>
+					<p>Ik ben bijna aan het eind van mijn studie en ben daar druk mee bezig. Na het behalen van de Minor Internetmarketing Management, kan ik beginnen aan een afstudeerstage te Rotterdam als UX Designer of Interaction Designer. </p>
+
+				<br />
 
 	</body>
 </html>
