--- a/jaar2.html
+++ b/jaar2.html
@@ -93,8 +93,8 @@
 						<tr>
 							<td>MT</td> 
 							<td>Media Theory</td>
-							<td class="onvoldoende" align="right">O</td>
-							<td class="onvoldoende" align="right">(3)</td>
+							<td align="right">6,5</td>
+							<td align="right">3</td>
 						</tr>
 						<tr>
 							<td>IxD2</td> 
@@ -257,11 +257,11 @@
 					<tr>
 						<td>Media Theory</td>
 						<td>Essay</td>
-						<td class="onvoldoende">O</td>
-						<td></td>
+						<td class="over">O</td>
+						<td>6,5</td>
 						<td></td>
 						<td align="right">100%</td>
-						<td class="onvoldoende" align="right">O</td>
+						<td align="right">6,5</td>
 					</tr>
 
 						<tr>
