--- a/jaar4.html
+++ b/jaar4.html
@@ -271,11 +271,11 @@
 								</tr>
 									<tr>
 										<td>Eindtoets</td>
-										<td></td>
+										<td>6,5</td>
 										<td></td>
 										<td></td>
 										<td align="right">30%</td>
-										<td align="right"></td>
+										<td align="right">6,5</td>
 									</tr>
 		</table>
 
