--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 					<p>Momenteel volg ik de studie Communicatie en Multimedia Design aan de Haagse Hogeschool. Deze studie heeft onder andere te maken met communicatie, marketing, programmeren en vooral design. Kort gezegd gaat deze studie over Webdesign. Internet blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen.</p>
 
 					<h3>Hoe ik ervoor sta</h3>
-					<p>Ik heb mijn Propedeuse behaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter.</p>
+					<p>Ik heb mijn Propedeuse behaald met een gemiddelde van 6,7. De hoofdfase (jaar 2 t/m 4) heb ik behaald met een mooie 7,0. Om te kunnen afstuderen doe ik een afstudeerstage voor 30 studiepunten.</p>
 
 					<h3>Wat ik nu doe</h3>
-					<p>Ik ben bijna aan het eind van mijn studie en ben daar druk mee bezig. Na het behalen van de Minor Internetmarketing Management, kan ik beginnen aan een afstudeerstage te Rotterdam als UX Designer of Interaction Designer. </p>
+					<p>Na het behalen van mijn laatste schoolvak kan ik mij concentreren op mijn afstudeerstage. Deze volg ik vanaf September in Rotterdam bij Internetdiensten Nederland. Omdat ik vanaf nu alle tijd heb ben ik vanaf juli begonnen bij Internetnetdiensten Nederland.</p>
 
 				<br />
 
