--- a/jaar3.html
+++ b/jaar3.html
@@ -39,10 +39,10 @@
 				<th>Studiepunten</th>
 			</tr>
 				<tr>
-					<td rowspan="1">Minor Design for User Experience</td>
-					<td>Assessment</td>
-					<td align="right">X</td>
-					<td align="right" class="onvoldoende">15</td>
+					<td rowspan="1"><s>Minor Design for User Experience</s></td>
+					<td><s>Assessment</s></td>
+					<td align="right"><s>X</s></td>
+					<td align="right"><s>15</s></td>
 				</tr>
 
 					<tr>
@@ -78,13 +78,13 @@
 			</tr>
 
 				<tr>
-					<td rowspan="1">Praktijk</td>
-					<td>Assessment</td>
-					<td class="onvoldoende">O</td>
-					<td width="30" class="onvoldoende">O</td>
+					<td rowspan="1"><s>Praktijk</s></td>
+					<td><s>Assessment</s></td>
+					<td><s>O</s></td>
+					<td width="30"><s>O</s></td>
 					<td width="30"></td>
-					<td align="right">100%</td>
-					<td align="right">X</td>
+					<td align="right"><s>100%</s></td>
+					<td align="right"><s>X</s></td>
 				</tr>
 		</table>
 
