--- a/jaar2.html
+++ b/jaar2.html
@@ -289,7 +289,7 @@
 								<td>7,5</td>
 								<td></td>
 								<td align="right">100%</td>
-								<td>7,5</td>
+								<td align="right">7,5</td>
 							</tr>
 		</table>
 
