--- a/jaar4.html
+++ b/jaar4.html
@@ -76,8 +76,8 @@
 										<tr>
 											<td rowspan="1">Minor Internetmarketing Management</td>
 											<td>Assessment</td> 
-											<td align="right"></td>
-											<td align="right">(15)</td>
+											<td align="right">6,3</td>
+											<td align="right">15</td>
 										</tr>
 
 		</table>
@@ -235,7 +235,7 @@
 					<td width="30"></td>
 					<td width="30"></td>
 					<td align="right">10%</td>
-					<td align="right"></td>
+					<td align="right">5,5</td>
 				</tr>
 					<tr>
 						<td rowspan="1">Opdracht 2: BMC</td>
@@ -243,7 +243,7 @@
 						<td width="30"></td>
 						<td width="30"></td>
 						<td align="right">10%</td>
-						<td align="right"></td>
+						<td align="right">8,0</td>
 					</tr>
 						<tr>
 							<td rowspan="1">Opdracht 3: Meso-Analyse</td>
@@ -251,30 +251,30 @@
 							<td width="30"></td>
 							<td width="30"></td>
 							<td align="right">10%</td>
-							<td align="right"></td>
+							<td align="right">7,0</td>
 						</tr>
 							<tr>
 								<td rowspan="1">Opdracht 4: Positioneren</td>
-								<td width="30" class="onvoldoende">NVD</td>
-								<td width="30"></td>
+								<td width="30" class="over">NVD</td>
+								<td width="30">6,0</td>
 								<td width="30"></td>
 								<td align="right">10%</td>
-								<td align="right"></td>
+								<td align="right">6,0</td>
 							</tr>
 								<tr>
 									<td rowspan="1">Rapportage</td>
-									<td width="30" class="onvoldoende">NVD</td>
+									<td width="30" class="over">NVD</td>
+									<td width="30">6,2</td>
 									<td width="30"></td>
-									<td width="30"></td>
-									<td align="right">30%</td>
-									<td align="right"></td>
+									<td align="right">60%</td>
+									<td align="right">6,2</td>
 								</tr>
 									<tr>
 										<td>Eindtoets</td>
 										<td>6,5</td>
 										<td></td>
 										<td></td>
-										<td align="right">30%</td>
+										<td align="right">50%</td>
 										<td align="right">6,5</td>
 									</tr>
 		</table>
