--- a/jaar4.html
+++ b/jaar4.html
@@ -79,6 +79,12 @@
 											<td align="right">6,3</td>
 											<td align="right">15</td>
 										</tr>
+											<tr>
+												<td rowspan="1">Afstuderen</td>
+												<td>Stage</td> 
+												<td align="right"></td>
+												<td align="right">(30)</td>
+											</tr>
 
 		</table>
 
@@ -277,6 +283,35 @@
 										<td align="right">50%</td>
 										<td align="right">6,5</td>
 									</tr>
+		</table>
+
+		<h2>Afstudeerstage IDN</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td width="240">Portfolio</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right"></td>
+				</tr>
+
+					<tr>
+						<td width="240">Assessment</td>
+						<td width="30"></td>
+						<td width="30"></td>
+						<td width="30"></td>
+						<td align="right">100%</td>
+						<td align="right"></td>
+					</tr>
 		</table>
 
 		<br />
